@@ -157,6 +157,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeableIndexed.rpt">Indexed-Full-Coded gene list</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable2.rpt">Papers containing genes that are not in the full coded portion of the database</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_FullCodeable.rpt">Markers that have no full coded data</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_EarlyEmbPapers.rpt">Early embryonic expression papers</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_MechDev.rpt">Mech Dev papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GeneExprPatternsandBrainResGeneExprPatterns.rpt">Gene Expr Patterns papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DevBiol.rpt">Dev Biol papers to full code</A>
