@@ -1,3 +1,10 @@
+TAG: qcreports_db-6-0-?
+DATE: 
+STAFF: 
+CHANGES:
+TR13204/Infrastructure/python 3
+re-add http://wts.informatics.jax.org/wts_projects/11100/11105/GXD_EarlyEmbPapers.py
+
 TAG: qcreports_db-6-0-15-4
 TAG: qcreports_db-6-0-15-3
 DATE: 12/30/2019
